<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            style="@style/talking_button"
            android:id="@+id/turtle"
            android:text="@string/turtle"/>

        <Button
            style="@style/talking_button"
            android:id="@+id/moose"
            android:text="@string/moose"/>

        <Button
            style="@style/talking_button"
            android:id="@+id/shark"
            android:text="@string/shark"/>

        <Button
            style="@style/talking_button"
            android:id="@+id/bear"
            android:text="@string/bear"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            style="@style/talking_button"
            android:id="@+id/loves"
            android:text="@string/loves"/>

        <Button
            style="@style/talking_button"
            android:id="@+id/hates"
            android:text="@string/hates"/>

        <Button
            style="@style/talking_button"
            android:id="@+id/talks"
            android:text="@string/talks"/>

        <Button
            style="@style/talking_button"
            android:id="@+id/eats"
            android:text="@string/eats"/>

    </LinearLayout>

</LinearLayout>